--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
     <uses-feature android:name="android.hardware.usb.host" android:required="true" />
     <uses-permission android:name="android.permission.USB_PERMISSION" />
 
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -18,7 +17,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name="com.iknek.tkey.MainActivity"
+            android:name="com.tillitis.tkey.MainActivity"
             android:exported="true"
             android:screenOrientation="portrait"
             android:directBootAware="true"
@@ -26,11 +25,9 @@
             android:theme="@style/Theme.Tkey">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
 
     </application>
 
