--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.github.mik3y:usb-serial-for-android:3.5.1'
+    implementation 'com.fazecast:jSerialComm:(2.0.0,3.0.0)'
     implementation 'org.bouncycastle:bcprov-jdk18on:1.74'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
